--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,29 @@
+amqp==2.2.2
+arrow==0.10.0
+billiard==3.5.0.3
 blessings==1.6
 bpython==0.16
+celery==4.1.0
 certifi==2017.7.27.1
 chardet==3.0.4
 curtsies==0.2.11
 dj-database-url==0.4.2
 Django==1.11.5
+gender-guesser==0.4.0
 greenlet==0.4.12
+gunicorn==19.7.1
 idna==2.6
+kombu==4.1.0
 oauthlib==2.0.4
 psycopg2==2.7.3.1
 Pygments==2.2.0
+python-dateutil==2.6.1
 pytz==2017.2
 requests==2.18.4
 requests-oauthlib==0.8.0
 six==1.11.0
 tweepy==3.5.0
 urllib3==1.22
+vine==1.1.4
 wcwidth==0.1.7
+whitenoise==3.3.1
